styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap');

html {
  font-family: 'Kalam', cursive;
  overflow-x: hidden;
}

*::-webkit-scrollbar {
  width: 0.25vw;
  background: none;
}
*::-webkit-scrollbar-thumb {
  background-color: rgb(55, 65, 81);
  border-radius: 10px;
}

header {
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-size: cover;
  background-image: url('../assets/header.svg');
}

.card {
  background: rgba(255, 255, 255, 0.55);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  min-height: 600px;
}

.heading {
  animation: heading 300ms ease 100ms forwards;
}

@keyframes heading {
  0% {
    opacity: 0;
    margin-top: 4rem;
  }
  50% {
    opacity: 50;
    margin-top: 2rem;
  }
  100% {
    opacity: 100;
    margin-top: 0;
  }
}

.name {
  color: transparent;
  font-weight: 800;
  background-image: url('../assets/name.png');
  background-clip: text;
  background-size: 400px;
  animation: bg-gradient 3s infinite alternate;
}

@keyframes bg-gradient {
  0% {
    background-position: left;
  }
  50% {
    background-position: right;
  }
  100% {
    background-position: left;
  }
}

